--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
   trojan-panel-caddy:
     image: caddy:2.6.2
@@ -37,10 +35,10 @@ services:
     restart: always
     network_mode: host
     volumes:
-      - "/tpdata/web/:/tpdata/trojan-panel/webfile/"
-      - "/tpdata/trojan-panel/logs/:/tpdata/trojan-panel/logs/"
-      - "/tpdata/trojan-panel/export:/tpdata/trojan-panel/export"
-      - "/tpdata/trojan-panel/template:/tpdata/trojan-panel/template"
+      - "./tpdata/web/:/tpdata/trojan-panel/webfile/"
+      - "./tpdata/trojan-panel/logs/:/tpdata/trojan-panel/logs/"
+      - "./tpdata/trojan-panel/export:/tpdata/trojan-panel/export"
+      - "./tpdata/trojan-panel/template:/tpdata/trojan-panel/template"
       - "/etc/localtime:/etc/localtime"
     environment:
       - "GIN_MODE=release"
@@ -59,8 +57,8 @@ services:
     restart: always
     network_mode: host
     volumes:
-      - "/tpdata/trojan-panel-ui/nginx/default.conf:/etc/nginx/conf.d/default.conf"
-      - "/tpdata/cert/:/tpdata/cert/"
+      - "./tpdata/trojan-panel-ui/nginx/default.conf:/etc/nginx/conf.d/default.conf"
+      - "./tpdata/cert/:/tpdata/cert/"
 
   trojan-panel-core:
     image: jonssonyan/trojan-panel-core
@@ -68,14 +66,14 @@ services:
     restart: always
     network_mode: host
     volumes:
-      - "/tpdata/trojan-panel-core/bin/xray/config:/tpdata/trojan-panel-core/bin/xray/config"
-      - "/tpdata/trojan-panel-core/bin/trojango/config:/tpdata/trojan-panel-core/bin/trojango/config"
-      - "/tpdata/trojan-panel-core/bin/hysteria/config:/tpdata/trojan-panel-core/bin/hysteria/config"
-      - "/tpdata/trojan-panel-core/bin/naiveproxy/config:/tpdata/trojan-panel-core/bin/naiveproxy/config"
-      - "/tpdata/trojan-panel-core/logs/:/tpdata/trojan-panel-core/logs/"
-      - "/tpdata/trojan-panel-core/config/sqlite/:/tpdata/trojan-panel-core/config/sqlite/"
-      - "/tpdata/cert/:/tpdata/cert/"
-      - "/tpdata/web/:/tpdata/web/"
+      - "./tpdata/trojan-panel-core/bin/xray/config:/tpdata/trojan-panel-core/bin/xray/config"
+      - "./tpdata/trojan-panel-core/bin/trojango/config:/tpdata/trojan-panel-core/bin/trojango/config"
+      - "./tpdata/trojan-panel-core/bin/hysteria/config:/tpdata/trojan-panel-core/bin/hysteria/config"
+      - "./tpdata/trojan-panel-core/bin/naiveproxy/config:/tpdata/trojan-panel-core/bin/naiveproxy/config"
+      - "./tpdata/trojan-panel-core/logs/:/tpdata/trojan-panel-core/logs/"
+      - "./tpdata/trojan-panel-core/config/sqlite/:/tpdata/trojan-panel-core/config/sqlite/"
+      - "./tpdata/cert/:/tpdata/cert/"
+      - "./tpdata/web/:/tpdata/web/"
       - "/etc/localtime:/etc/localtime"
     environment:
       - "GIN_MODE=release"
