--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
       - "./tpdata/caddy/config.json:/tpdata/caddy/config.json"
       - "./tpdata/cert/:/tpdata/cert/"
       - "./tpdata/web/:/tpdata/web/"
-      - "./tpdata/caddy/logs/:/tpdata/caddy/logs/"
+      - "./tpdata/logs/:/tpdata/caddy/logs/"
     command: caddy run --config /tpdata/caddy/config.json
 
   trojan-panel-mariadb:
@@ -36,7 +36,7 @@ services:
     network_mode: host
     volumes:
       - "./tpdata/web/:/tpdata/trojan-panel/webfile/"
-      - "./tpdata/trojan-panel/logs/:/tpdata/trojan-panel/logs/"
+      - "./tpdata/logs/:/tpdata/trojan-panel/logs/"
       - "./tpdata/trojan-panel/export:/tpdata/trojan-panel/export"
       - "./tpdata/trojan-panel/template:/tpdata/trojan-panel/template"
       - "/etc/localtime:/etc/localtime"
@@ -58,6 +58,7 @@ services:
     network_mode: host
     volumes:
       - "./tpdata/trojan-panel-ui/nginx/default.conf:/etc/nginx/conf.d/default.conf"
+      - "./tpdata/logs/:/var/logs/nginx/"
       - "./tpdata/cert/:/tpdata/cert/"
 
   trojan-panel-core:
